--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 
 .calculator {
     border-radius: 5px;
+    /* display: flex; */
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -61,22 +62,22 @@ button:hover {
 }
 
 .equal-sign {
-    background-color: #4caf50;
+    background-color: #447b46;
     color: white;
     grid-column: span 1;
 }
 
 .equal-sign:hover {
-    background-color: #388e3c;
+    background-color: #00ff0d;
 }
 
 .all-clear {
-    background-color: #f44336;
+    background-color: #b1524b;
     color: white;
 }
 
 .all-clear:hover {
-    background-color: #d32f2f;
+    background-color: #ff0000;
 }
 
 .history {
@@ -94,4 +95,16 @@ button:hover {
 
 .history li {
     margin-bottom: 5px;
+}
+
+.history {
+    width: 50%;
+    border: none;
+    background-color: #cfd6ff;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 0 10px;
+    font-size: 2.5rem;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
